$Id$

Latest changes:

=== devel ===

- Build system:
  * toolchains:
    - add menuconfig option to adjust HOSTCC variable 
    - add ccache for download- and kernel-toolchain

- New tools and hooks:
  * external
  * new make targets:
    - check-downloads: checks all downloads for availability (also 
      $(pkg)-check-downloads)
    - mirror: downloads all package downloads into dl/mirror (also
      $(pkg)-download-mirror). This makes hardlinks for dupes in dl/ and
      dl/mirror to save disk space.

- New patches (read online help for more info):
    * Remove DECT-files and modules on W900V

- New packages, libs, modules:
    * bfusb 3-18-39 (firmware for bluetooth stick)
    * br2684ctl 20040226
    * dtach 0.8
    * external 0.1
    * hd-idle 0.1
    * httptunnel 3.3
    * linux-atm 2.4.1
    * mcabber 0.9.7
    * microperl 5.8.8
    * nagios 2.11
    * nano 2.0.9
    * nfs-utils 1.1.3
    * nfsd-cgi 0.1
    * pciutils 3.0.0
    * portmap 6.0
    * sane-backends 1.0.19
    * socat 1.6.0.1
    * squid 3.0.STABLE9
    * tcp_wrappers 7.6
    * tinc 1.0.8
    * tree 1.5.1.2
    * usbutils 0.73
    * wol 0.7.1
    * wput 0.6.1
    * xpdf 3.02
    * new kernel modules: bfusb, pppoe, pppox

- Updated tools and hooks:
    * push_firmware now supports flashing from complete firmware images (by unpacking to tempfile)

- Updated patches:

- Updated packages and libs:
    * avm-firewall 2.0.4_rc2
    * bip 0.7.5
    * callmonitor 1.12.2
    * curl 7.19.0
    * devmapper 1.02.27
    * dns2tcp 0.4.3
    * e2fsprogs 1.41.1
    * espeak 1.39
    * fuse 2.7.4
    * inadyn-mt 02.12.24
    * libftdi 0.14
    * module-init-tools 3.4
    * ntfs-3g 1.5012
    * obexftp 0.22
    * openssl 0.9.8i
    * openvpn 2.1_rc13
    * privoxy 3.0.10
    * ruby 1.8.7
    * sg3_utils 1.26
    * tor 0.2.0.31
    * transmission 1.34
    * tree 1.5.2.1
    * wget 1.11.4

- Remove packages, libs, modules, tools:

- Firmware updates:

- BusyBox:
    * updated to 1.11.3

- Web interface:
